--- a/roadmap.org
+++ b/roadmap.org
@@ -11,7 +11,9 @@
 *** DONE Notebook switch
     CLOSED: [2017-02-19 Sun 23:05]
 *** TODO Notebook add/del
-*** TODO "Reader" mode concatenation 
+*** TODO Display NodeGroups
+    Need to create more visual intuition around node groups. Right now there is no visual relationship between a node and its siblings(node group). Should eliminate the space between sibling nodes and increase the size of selected node.
+*** TODO "Reader" mode concatenation
 ** Medium Priority
 *** TODO Search
     https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/
@@ -19,31 +21,10 @@
 *** TODO Nodegroup -> nodegroup skipping navigation
     Pageup / pagedown??
 *** TODO Login screen when logged out
-*** TODO Codemirror editor
+*** TODO Codemirror editor & spellcheck
 *** TODO Editor grow when it is too small
 *** TODO "Save all" functionality
 *** TODO Tutorial
-    (Level 1)
-    # Welcome to Bodhi
-    The most premier-est note taking app. The most efficient way to control Bodhi is with the keyboard (clicking is allowed too).
-
-    The up and down arrow keys navigate between this note and its siblings. The left and right arrow keys move between a note and it's children/parent. Move to this note's child with the right arrow key.
-
-    (Level 2)
-    ## Controls
-    - **Ctrl+Enter:** Edit the currently selected note or save it if you are currently editing.
-
-    - **Ctrl+Shift+Up:** Create a sibling above the currently selected node.
-
-    - **Ctrl+Shift+Down:** Create a sibling below the currently selected node.
-
-    - **Ctrl+Shift+Right:** Append child to the selected node.
-
-    ### Try it
-    Create a child of this note with Ctrl+Shift+Right. Edit the note with Ctrl-Enter.
-
-    ### Markdown
-    Markdown is a simple way to format plain text. Edit this note to see some example Markdown. A full Markdown tutorial can be found [here](https://guides.github.com/features/mastering-markdown/).
 ** Low Priority
 *** TODO Node update is a diff/patch
 *** TODO Super sweet animations
@@ -54,6 +35,8 @@
 ** DONE Smaller screen sizes have scroll bars
    CLOSED: [2017-02-21 Tue 10:33]
 ** TODO Pane focus issues after clicking away from any pane
+   https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets
 ** TODO Editor isn't "dirty" until several character difference
-** TODO Don't toggle editor when link is clicked
+** DONE Don't toggle editor when link is clicked
+   CLOSED: [2017-02-21 Tue 16:45]
 ** TODO Change link colors
