--- a/roadmap.org
+++ b/roadmap.org
@@ -10,7 +10,8 @@
     CLOSED: [2017-02-21 Tue 12:34]
 *** DONE Notebook switch
     CLOSED: [2017-02-19 Sun 23:05]
-*** TODO Notebook add/del
+*** TODO Notebook add
+*** TODO Notebook del
 *** TODO Display NodeGroups
     Need to create more visual intuition around node groups. Right now there is no visual relationship between a node and its siblings(node group). Should eliminate the space between sibling nodes and increase the size of selected node.
 *** TODO "Reader" mode concatenation
@@ -24,7 +25,8 @@
 *** TODO Codemirror editor & spellcheck
 *** TODO Editor grow when it is too small
 *** TODO "Save all" functionality
-*** TODO Tutorial
+*** DONE Tutorial
+    CLOSED: [2017-02-26 Sun 22:39]
 ** Low Priority
 *** TODO Node update is a diff/patch
 *** TODO Super sweet animations
@@ -34,9 +36,10 @@
 * Bugs
 ** DONE Smaller screen sizes have scroll bars
    CLOSED: [2017-02-21 Tue 10:33]
-** TODO Pane focus issues after clicking away from any pane
-   https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets
+** TODO Pane focus issues 
+   When a pane becomes focused (like, input focused) and it is off screen at all the browser automatically scrolls it on screen. This wouldn't be a problem but it overrides the custom scrolling that I do. Will probably need to eliminate the tabindex and focus thing I have going on and move key event handlers to the app root :(
 ** TODO Editor isn't "dirty" until several character difference
 ** DONE Don't toggle editor when link is clicked
    CLOSED: [2017-02-21 Tue 16:45]
-** TODO Change link colors
+** DONE Change link colors
+   CLOSED: [2017-02-26 Sun 19:35]
